--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
 baseURL = "https://example.com/"
 languageCode = "en"
 title = "Initio - Free, multipurpose html5 template by GetTemplate"
+theme = "hugo-initio"
 
 [params]
     name = "Anthony Russel"
