--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ theme = "hugo-initio"
     avatar = "images/link.png"
     avatarclass = "circle"
     background = ""
-    banner = "images/zeldabanner.jpg"
+    banner = "images/banner.jpg"
     favicon = "images/gt_favicon.png"
     DateForm = "January 2, 2006"
     author = "Diego Miret Halffter"
