--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://main.dui7if5d6agqo.amplifyapp.com/"
 languageCode = "en"
-title = "Initio - Free, multipurpose html5 template by GetTemplate"
+title = "Diego Miret Halffter"
 theme = "hugo-initio"
 
 [params]
